--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -12,7 +12,7 @@
         />
 
     <item android:id="@+id/bottom_cart"
-        android:title="cart"
+        android:title="Lms"
         android:icon="@drawable/cart"
         />
 
