--- a/app/src/main/res/layout/fragment_events_fragment.xml
+++ b/app/src/main/res/layout/fragment_events_fragment.xml
@@ -3,13 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".electronicsfragment">
+    tools:context=".events_fragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Electronics"
+        android:text="Events fragment"
         android:textSize="40sp"
         android:gravity="center"
         />
