--- a/app/src/main/res/layout/fragment_visual_lab_fragment.xml
+++ b/app/src/main/res/layout/fragment_visual_lab_fragment.xml
@@ -3,14 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".primefragment">
+    tools:context=".visuals_lab_fragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="prime fragment"
+        android:text="Visual labs"
         android:textSize="40sp"
         android:gravity="center"
         />
+
 </FrameLayout>
